hexagonal architecture finished and update of the API specification
