# src/data/warehouse_models.rs
@@ -3,18 +3,19 @@ use serde::{Serialize,Deserialize};
 
 #[derive(Serialize, Deserialize, Debug, Clone)]
 pub struct Warehouse{
-    #[serde(rename = "_id")]
     id:i32,
-    name:String,
     location:Coordinates
+}
+
+impl Warehouse {
+    pub fn new(id: i32, location: Coordinates) -> Self {
+        Warehouse { id, location }
+    }
 }
 
 impl Warehouse {
     pub fn id(&self) -> i32 {
         self.id
-    }
-    pub fn name(&self) -> &str {
-        &self.name
     }
     pub fn location(&self) -> &Coordinates {
         &self.location
@@ -24,15 +25,12 @@ impl Warehouse {
 #[derive(Serialize, Deserialize, Debug, Clone)]
 pub struct WarehouseRequest{
     id:i32,
-    name:String,
     location:Coordinates
 }
 impl Warehouse{
-    pub fn from_request(mut request:WarehouseRequest)->Warehouse {
-        request.location.des = true;
+    pub fn from_request(request:WarehouseRequest)->Warehouse {
         Warehouse{
             id:request.id,
-            name:request.name,
             location:request.location
         }
     }
